<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="287dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="287dp"
        android:layout_height="113dp"
        android:background="@drawable/dialog_vip_top_bg">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="46dp"
            android:layout_marginTop="46dp"
            android:gravity="center"
            android:text="@string/unlike_title"
            android:textColor="@color/text_color"
            android:textSize="16sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="287dp"
        android:layout_height="48dp"
        android:background="@drawable/dialog_vip_bottom_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_text_cancel_select_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/cancel_tv_bg"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/confirm_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_text_confirm_select_bg"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/yellow"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>


