<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root_ll"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/light_grey"
              android:layout_marginTop="25dp">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/toolbar_height"
       android:background="@color/white">

       <ImageView
           android:id="@+id/back_iv"
           style="@style/title_imageview_style"/>

       <TextView
           style="@style/title_textview_style"
           android:layout_toRightOf="@+id/back_iv"
           android:text="@string/feedback"/>
   </RelativeLayout>


    <EditText
        android:id="@+id/feedback_et"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:gravity="top"
        android:maxLength="250"
        android:hint="@string/feedback_hint"
        android:background="@drawable/feedback_et_bg"
        android:padding="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/text_color"/>

    <TextView
        android:id="@+id/commit_tv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/feedback_btn_empty_bg"
        android:text="@string/send"
        android:gravity="center"
        android:textSize="@dimen/large_text_size"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:id="@+id/adViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"/>


</LinearLayout>
